# XNgine

./: .gitignore  CMakeLists.txt  README.md  armhf-toolchain.cmake  bluetoothctlctl.py  file_sync.txt
client/: index.html  main.js  style.css
lua/: 3dcam.lua  animation.lua  bouncemark.lua  brickbreaker.lua  clean_america.lua  main.lua  settings.lua  ui.lua  yamsim.lua
lua/tests/: 2d.lua  3d.lua  README.md  api_tests.lua  catapult.lua  gameloop.lua  particles.lua  raymarch.lua  shaders.lua
lua/util/: animation.lua  cursor.lua  physics.lua  physics2d.lua
models/: 2objects.fbx  2x3x20.iqm  3x2x20.iqm  bigpaddle.iqm  bumper_baddle.iqm  bumper_paddle_f.iqm  bumper_paddle_fb.iqm  bumper_paddle_l.iqm  bumper_paddle_r.iqm  catapult_arm.iqm  concave_cat.iqm  halfpipe.iqm  halfsphere.iqm  lowcube.iqm  nested_objects.fbx  phys_level.iqm  square_bucket.iqm  tower.iqm  xabnab.glb  xabnab.iqm
shaders/: brickbreaker_post.fs  julia_3d.fs  julia_set.fs  raymarch.fs  raymarch_sculpt.fs  sdf.fs  swirl.fs
src/: main.c  main.cpp  yamsim.cpp
src/SPI_Camera/: EZCAM  autosync.sh  makefile  rsync_raspi.sh  run_Arducam_Demo
src/SPI_Camera/src/: ArducamDemo.c  EZCAM.c  bcm283x_board_driver.h
src/XNlib/: xn_gpio.hpp  xn_ik.hpp  xn_vec.hpp
src/graphics/: monitor_info.c  particles.c  particles.h  renderer.c  renderer.h
src/graphics/egl/: egl_info.c  egl_tests.c
src/lua-bindings/: lua_particles.c  lua_physics.c  lua_raylib.c  lua_server.c  lua_util.c  lua_util.h
src/pigpio-master/: Makefile
src/servers/: message_queue.c  message_queue.h
src/servers/bt/: gamepad_server.c  gamepad_server.h
src/servers/ws/: protocol_lws_minimal.c  ws_common.h  ws_ring_server.c
src/util/: bob_math.c  bob_math.h  collisions.c  file_io.c  foreach.h  input.c  input.h  linked_list.c  linked_list.h
src/util/asm/: asm_util.h  asmtest.c
src/util/fbxloader/: fbxloader.c  fbxloader.h
src/ws/: lws_gibberish.c  message_queue.c  message_queue.h  protocol_lws_minimal.c  ws_common.h  ws_ring_server.c
tools/: gen_lua_enum.py  in.c  result.lua
tools/lua-binder/: gen_lua_bindings.py  in.h  result.c  result.h
